added default link styles

--- a/css/screen.css
+++ b/css/screen.css
@@ -123,6 +123,23 @@ figcaption {
   color: hsl(198.0786026201, 10%, 50%);
 }
 
+a {
+  color: hsl(198.0786026201, 100%, 40%);
+  transition: all 0.1s ease-in-out;
+}
+
+a:hover {
+  color: hsl(198.0786026201, 100%, 50%);
+}
+
+a:visited {
+  color: hsl(198.0786026201, 100%, 40%);
+}
+
+a:active {
+  color: hsl(198.0786026201, 100%, 30%);
+}
+
 /*---------------------------------------/*
  # OBJECTS
 /*---------------------------------------*/
