--- a/css/screen.scss
+++ b/css/screen.scss
@@ -214,6 +214,16 @@ h1 {
   font-weight: 700;
   line-height: calc($baseline * 4);
   margin-bottom: $space-m;
+
+  @include mq(bp1) {
+    font-style: $ms9;
+    line-height: calc($baseline * 6);
+  }
+
+  @include mq(bp2) {
+    font-style: $ms11;
+    line-height: calc($baseline * 8);
+  }
 }
 
 h2 {
